leave routes and swagger doc
