# src/controllers/Leave/application.controller.ts
@@ -1,30 +1,69 @@
 /* eslint-disable prettier/prettier */
 
-import { IsDate, IsString } from 'class-validator';
+import { CreateLeaveApplicationDTO, UpdateLeaveApplicationDTO } from '@/dtos/Leave/application.dto';
+import { ILeaveApplication } from '@/interfaces/leave-interface/application.interface';
+import { NextFunction, Request, Response } from 'express';
+import LeaveApplicationService from '@/services/leave/application.service';
 
-export class ApplicationDTO{
 
-    @IsString()
-    public employee_id: string;
 
-    @IsString()
-    public leave_type_id: string;
+class LeaveApplicationController {
+  public leaveApplicationService = new LeaveApplicationService();
 
-    @IsDate()
-    public from_date: Date;
+  public getLeaveApplications = async (req: Request, res: Response, next: NextFunction) => {
+    try {
+      const findAllLeaveApplicationsData: ILeaveApplication[] = await this.leaveApplicationService.findAllLeaveapplication();
 
-    @IsDate()
-    public to_date : Date;
+      res.status(200).json({ data: findAllLeaveApplicationsData, message: 'findAll' });
+    } catch (error) {
+      next(error);
+    }
+  };
 
-    @IsString()
-    public leave_approver: string;
+  public getLeaveApplicationById = async (req: Request, res: Response, next: NextFunction) => {
+    try {
+      const LeaveApplicationId: string = req.params.id;
+      const findOneLeaveApplicationData: ILeaveApplication = await this.leaveApplicationService.findLeaveapplicationById(LeaveApplicationId);
 
-    @IsDate()
-    public posting_date: Date;
+      res.status(200).json({ data: findOneLeaveApplicationData, message: 'findOne' });
+    } catch (error) {
+      next(error);
+    }
+  };
 
-    @IsString()
-    public reason: string;
-    
-    @IsString()
-    public status: string;
+  public createLeaveApplication = async (req: Request, res: Response, next: NextFunction) => {
+    try {
+      const LeaveApplicationData: CreateLeaveApplicationDTO = req.body;
+      const createLeaveApplicationData: ILeaveApplication = await this.leaveApplicationService.createLeaveapplication(LeaveApplicationData);
+
+      res.status(201).json({ data: createLeaveApplicationData, message: 'created' });
+    } catch (error) {
+      next(error);
+    }
+  };
+
+  public updateLeaveApplication = async (req: Request, res: Response, next: NextFunction) => {
+    try {
+      const LeaveApplicationId: string = req.params.id;
+      const LeaveApplicationData: UpdateLeaveApplicationDTO = req.body;
+      const updateLeaveApplicationData: ILeaveApplication = await this.leaveApplicationService.updateLeaveapplication(LeaveApplicationId, LeaveApplicationData);
+
+      res.status(200).json({ data: updateLeaveApplicationData, message: 'updated' });
+    } catch (error) {
+      next(error);
+    }
+  };
+
+  public deleteLeaveApplication = async (req: Request, res: Response, next: NextFunction) => {
+    try {
+      const LeaveApplicationId: string = req.params.id;
+      const deleteLeaveApplicationData: ILeaveApplication = await this.leaveApplicationService.deleteLeaveapplication(LeaveApplicationId);
+
+      res.status(200).json({ data: deleteLeaveApplicationData, message: 'deleted' });
+    } catch (error) {
+      next(error);
+    }
+  };
 }
+
+export default LeaveApplicationController;
