# src/dtos/Leave/policy.dto.ts
@@ -11,3 +11,17 @@ export class CreateLeavePolicyDto{
     @IsBoolean()
     public is_active : Boolean;
 }
+
+export class UpdateLeavePolicyDto{
+    @IsNotEmpty()
+    public _id: string;
+    
+    @IsNotEmpty()
+    public leave_type_id: string;
+
+    @IsNotEmpty()
+    public annual_allocation: string;
+
+    @IsBoolean()
+    public is_active : Boolean;
+}
